Issue #22: Jump to mapping after data load. Renamed 'editor' route to 'data', renamed main component from 'EditorPage' to ' RandoPage'.
Added 'waiter' panel on the load data page. Those things need to be added also on dataset editors.

--- a/src/pages/RandoPage/RandoPage.scss
+++ b/src/pages/RandoPage/RandoPage.scss
@@ -1,4 +1,4 @@
-.EditorPage {
+.RandoPage {
   display: flex;
   flex: 1;
   flex-direction: column;
